--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8888
 spring.application.name=mssc-brewery-config
 
 #spring.cloud.config.server.git.uri=https://github.com/springframeworkguru/mssc-example-config-repo
-spring.cloud.config.server.git.uri=https://github.com/springframeworkguru/mssc-brewery-config-repo
+#spring.cloud.config.server.git.uri=https://github.com/springframeworkguru/mssc-brewery-config-repo
+spring.cloud.config.server.git.uri=https://github.com/jiangwensi/mssc-brewery-config-repo
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.search-paths={application}
 
